tests/NormalTests/paczka1/small_fuzzy/47086936.err
Error in line 8: 1G8Zj0 S536 18,96
Error in line 9: nMv S,62 87,4
